[package]
name = "testbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
axum-login = "0.15.1"
serde = "1.0.201"
tokio = { version = "1.37.0", features = ["full"] }
